--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
 streamlit==1.28.0
 openai==0.28.0
 python-dotenv==1.0.0
-Pillow==10.0.1
+Pillow>=10.0.0
 pytesseract==0.3.10
 pdfkit==1.0.0
 streamlit-chat==0.1.0
-python-mpesa==0.4.1
+python-mpesa==0.1.10
+tqdm==4.66.1
+langchain==0.0.308
+langchain-community==0.0.308
+langchain-openai==0.0.308
+langchain-text-splitters==0.0.308
+langchain-core==0.0.308
+langchain-llms==0.0.308
+langchain-document-loaders==0.0.308
