--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DARAJA_CONSUMER_SECRET=your_secret
 DARAJA_SHORTCODE=174379  # For sandbox; replace with live shortcode
 DARAJA_PASSKEY=bfb279f9aa9bdbcf1...  # From Safaricom portal
 DARAJA_CALLBACK_URL=https://yourdomain.com/daraja/callback
+DEEPSEEK_API_KEY=sk-2ddb4e155c0346b28e671ff461240848
